--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-first-app",
+  "name": "taapg-circular",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@capacitor/android": "^2.4.2",
-    "@capacitor/core": "^2.4.2",
+    "@capacitor/core": "^3.0.0",
+    "@capacitor/geolocation": "^1.3.1",
     "@capacitor/ios": "^2.4.2",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
