--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^2.4.2",
+    "@capacitor/camera": "^1.2.4",
     "@capacitor/core": "^3.0.0",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/ios": "^2.4.2",
