--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@capacitor/android": "^3.4.0",
+    "@capacitor/android": "3.4.0",
     "@capacitor/camera": "^1.2.4",
-    "@capacitor/core": "^3.0.0",
+    "@capacitor/core": "^3.4.0",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/ios": "^2.4.2",
+    "@ionic/cli": "^6.18.1",
+    "@ionic/pwa-elements": "^3.1.1",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
@@ -23,7 +25,7 @@
     "vuex": "^4.0.0-rc.1"
   },
   "devDependencies": {
-    "@capacitor/cli": "^2.4.2",
+    "@capacitor/cli": "^3.4.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
