--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
+    "parse": "^3.4.1",
+    "regenerator-runtime": "^0.13.9",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
