--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/android": "3.4.0",
     "@capacitor/camera": "^1.2.4",
     "@capacitor/core": "^3.4.0",
+    "@capacitor/filesystem": "^1.1.0",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/ios": "^3.4.0",
     "@ionic/cli": "^6.18.1",
