--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/filesystem": "^1.1.0",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/ios": "^3.4.0",
+    "@capacitor/storage": "^1.2.5",
     "@ionic/cli": "^6.18.1",
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/vue": "^5.4.0",
